test/pass/codegen/std/actions/addMapObject/test.twge
block init {
    actions {
        addMapObject(x = 1, y = 2, object = "大箱子");
        addMapObject(x = 5, y = 7, object = "3x3淺綠樹");
    }
}