test/fail/transform/redefConstBlock/test.twge
const x = 1;
block x {}